--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7",
+    "url": "^0.11.1"
   }
 }
