adding index.js file

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT = 4000
 NODE_ENV = development
-DATABASE = "mongodb://localhost:27017/portfolio"
-DATABASE_PASSWORD =ajay12345
+# DATABASE = "mongodb://localhost:27017/portfolio"
+DATABASE = "mongodb+srv://ajaysheokand:i0UtbvEEFKzCWcvN@cluster0.zzgh3iy.mongodb.net/"
+# DATABASE_PASSWORD =ajay12345
+DATABASE_PASSWORD =i0UtbvEEFKzCWcvN
 
 ACCESS_TOKEN_SECRET = Sheokand@123
