--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "ajay",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
